--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                           Syndicated Content
                         </option>
                         <option value="Web development">Web development</option>
+                        <option value="Other">Other</option>
                       </select>
                     </div>
                     <div class="col-xl-6 col-md-12">
@@ -301,6 +302,7 @@
                           placeholder="Rate"
                           min="0"
                           step="0.1"
+                          value="10"
                           required
                         />
                         <span class="input-group-text">%</span>
