js and css in directories

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="revenuecalculator.js"></script>
-    <link href="revenuecalculator.css" rel="stylesheet" />
+    <script src="js/revenuecalculator.js"></script>
+    <link href="css/revenuecalculator.css" rel="stylesheet" />
   </head>
   <body class="bg-light-subtle">
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
