--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
           </table>
         </div>
       </div>
+      <footer class="py-3 my-5 border-top">
+        <div class="col-12 text-body-secondary text-center">Made with ❤️ by <a href="https://jasonmurtha.com">Jason Murtha</a></div>
+      </footer>
     </div>
   </body>
 </html>
