--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <option value="Co-Productions">
                             Co-Productions
                         </option>
-                        <option value="courses">Courses/Online Education</option>
+                        <option value="Courses/Online Education">Courses/Online Education</option>
                         <option value="Direct sold advertising">
                           Direct sold advertising
                         </option>
